# kartograf

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  conftest.py  environment.yml  kartograf_example.ipynb  pyproject.toml  readthedocs.yaml  rever.xsh  setup.cfg
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release_template.md
.github/workflows/: check_for_api_break.yaml  ci.yaml
.img/: Thumbs.db
dev/: td_length_measure.ipynb
devtools/pypi-pkg/: README.md  pyproject.toml
devtools/pypi-pkg/kartograf/: __init__.py
docs/: CHANGELOG.rst  api.rst  conf.py  environment.yml  guide.rst  index.rst  install.rst  requirements.txt  showcase.nblink  tutorial.rst
docs/_static/css/: custom.css
docs/api/: atom_align.rst  atom_aligner.rst  atom_mapping.rst  kartograf.aligners.rst  kartograf.filters.rst  kartograf.mappers.rst  kartograf.metrics.rst  kartograf.scorers.rst  kartograf.utils.rst  networks.rst
docs/guide/: application_free_energies_system_representations.rst  application_reindexing_problem.rst  atom_alignment.rst  atom_mapping.rst  atom_mapping_scoring.rst  free_energies_system_representations.rst  molecule_alignment.rst
docs/tutorial/: comparing_mappings.rst  custom_filters.rst  fused_rings.rst  mapping_tutorial.rst  simple_tutorial.rst  visualization_widget.rst
examples/: README.md  build_radial_ofe_graphs.py  environment.yaml  kartograf_example.ipynb
kartograph/: __init__.py
kartograph/atom_mapping/: geom_mapper.py
kartograph/test/: test_geom_mapper.py
news/: backfill.rst  better-warning.rst  bond_break.rst  bond_break_flag.rst  bye-bye-PyPI.rst  cdist.rst  new-default.rst  new-home-for-viz.rst  pr-144.rst  version.rst
src/kartograf/: __init__.py  atom_align.py  atom_aligner.py  atom_mapper.py  atom_mapping_scorer.py  atom_mapping_scoring.py  atom_scorer.py
src/kartograf/atom_mapping/: __init__.py  geom_align.py  geom_mapper.py  geom_scorer.py
src/kartograf/filters/: __init__.py  atom_changes.py  bond_changes.py  element_change.py  ring_changes.py
src/kartograf/mapping_metrics/: __init__.py  _abstract_scorer.py  mapping_comparison_metrics.py  metric_mapping_rmsd.py  metric_shape_difference.py  metric_volume_ratio.py  metrics_ff_scorer.py  metrics_mapping_comparisons.py
src/kartograf/networks/: __init__.py  mst_networker.py  radial_networker.py
src/kartograf/tests/: __init__.py  conf.py  conftest.py  test_atom_align.py  test_atom_mapper.py  test_atom_mapping_comparer.py  test_atom_mapping_scorer.py  test_element_filters.py  test_geom_mapper.py  test_ring_filters.py  test_utils_vis.py
src/kartograf/tests/data/: biaryl-indene.sdf  biphenyl.sdf  lig_E29.sdf  lig_E6.sdf  pfkfb3_ligands.sdf
src/kartograf/utils/: mapping_visualization_widget.py  multistate_visualization.py  multistate_visualization_3D.py  optional_imports.py
src/kartograph/: __init__.py
src/kartograph/atom_mapping/: __init__.py  geom_scorer.py
src/kartograph/networks/: mst_networker.py
tests/: test_geom_mapper.py
tools/: fmt_rst_codeblocks.py
wally/: __init__.py  wally_mapper.py
