[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools>=77.0.3",
  "setuptools-scm>=8",
]

[project]
name = "kartograf"
description = "Kartograf is a package for geometrically mapping atoms of two molecules."
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]

authors = [ { name = "The OpenFE developers", email = "openfe@omsf.io" } ]
requires-python = ">=3.11"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
]
urls."Homepage" = "https://github.com/OpenFreeEnergy/kartograf"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [ 'src' ]

[tool.setuptools.package-data]
kartograf = [ "tests/data/*.pdb", "tests/data/*.sdf" ]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 120
target-version = "py311"

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = [
  # "F",  # Pyflakes
  "I", # isort
  "W", # pycodestyle warnings
  # "E",  # pycodestyle errors
  # "C901"  # mccabe complexity  TODO: add this back in
]
lint.ignore = [
  "E402", # module-level import not at top (conflicts w/ isort)
  "E722", # bare excepts (TODO: we should fix these in a follow-up PR)
  "E731", # lambda expressions (TODO: we should fix these)
  "F401", # unused imports (TODO: we should fix these)
]

# ignore "unused import" error for all __init__.py files
lint.per-file-ignores."__init__.py" = [ "E401" ]

lint.isort.known-first-party = [ "kartograf" ]
