[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77" ]

[project]
name = "kartograf"
version = "1.0.2"
description = "Please use conda-forge to install kartograf"
readme = "README.md"
license = "MIT"
authors = [ { name = "Mike Henry", email = "mike.henry@omsf.io" } ]
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [  ]

[tool.setuptools.packages.find]
where = [ "." ]
